// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserBlock should render UserBlock with optional props (snapshot) 1`] = `
<a
  class="userBlock testClass"
  href="#link"
>
  <img
    alt="#"
    class="authorAvatar"
    src="#avatarSrc"
  />
  <span
    class=""
  >
    Дмитрий
  </span>
</a>
`;

exports[`UserBlock should render UserBlock without optional props (snapshot) 1`] = `
<a
  class="userBlock userBlockSizes"
  href="https://www.reddit.com/api/v1/authorize?client_id=undefined&response_type=code&state=random_string&redirect_uri=http://localhost:3000/auth&duration=permanent&scope=read identity submit"
>
  <img
    alt="#"
    class="authorAvatar"
    src="/static/image/AnonimIcon.svg"
  />
  <span
    class="anonim"
  >
    Аноним
  </span>
</a>
`;
